--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             status.textContent = 'Channel ID: 752106070532554833 • Generating...';
 
             try {
-                const response = await fetch('/generate-markov', {
+                const response = await fetch('http://localhost:3000/generate-markov', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ 
