--- a/index.html
+++ b/index.html
@@ -149,14 +149,11 @@
             loader.style.display = 'block';
             status.textContent = 'Channel ID: 752106070532554833 • Generating...';
 
-            try {
-                const response = await fetch('http://localhost:3000/generate-markov', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ 
-                        channelId: '752106070532554833'
-                    })
-                });
+            const response = await fetch('https://your-render-app.onrender.com/generate-markov', {
+                  method: 'POST',
+                  headers: { 'Content-Type': 'application/json' },
+                  body: JSON.stringify({ channelId: '752106070532554833' })
+            });
 
                 const data = await response.json();
                 
