--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             loader.style.display = 'block';
             status.textContent = 'Channel ID: 752106070532554833 • Generating...';
 
-            const response = await fetch('https://your-render-app.onrender.com/generate-markov', {
+            const response = await fetch('https://markovbot-backend.onrender.com/', {
                   method: 'POST',
                   headers: { 'Content-Type': 'application/json' },
                   body: JSON.stringify({ channelId: '752106070532554833' })
