--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         }
     </style>
 </head>
+</head>
 <body>
     <div class="container">
         <h1>Markov Chain Generator</h1>
@@ -173,21 +174,24 @@
             status.textContent = 'Generating...';
 
             try {
-                const response = await fetch('https://markovbot-backend.onrender.com', {
+                const response = await fetch('https://your-render-app.onrender.com/generate-markov', {
                     method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
+                    headers: { 
+                        'Content-Type': 'application/json',
+                        'Accept': 'application/json'
+                    },
                     body: JSON.stringify({ 
                         channelId: '752106070532554833'
                     })
                 });
 
+                const text = await response.text();
+                const data = JSON.parse(text);
+                
                 if (!response.ok) {
-                    const errorData = await response.json();
-                    throw new Error(errorData.error || 'Failed to generate message');
+                    throw new Error(data.error || 'Unknown error occurred');
                 }
 
-                const data = await response.json();
-                
                 const processedText = data.markovText.replace(/<(?<animated>a?):(?<name>\w+):(?<id>\d+)>/g, (match, animated, name, id) => {
                     const type = animated ? 'gif' : 'png';
                     return `<img src="https://cdn.discordapp.com/emojis/${id}.${type}" alt=":${name}:" class="discord-emoji">`;
