--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             status.textContent = 'Generating...';
 
             try {
-                const response = await fetch('https://your-render-app.onrender.com/generate-markov', {
+                const response = await fetch('https://markovbot-backend.onrender.com', {
                     method: 'POST',
                     headers: { 
                         'Content-Type': 'application/json',
