--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </div>
 
     <script>
-        const API_ENDPOINT = 'https://your-render-app.onrender.com/api/generate';
+        const API_ENDPOINT = 'https://markovbot-backend.onrender.com';
 
         async function generate() {
             const elements = {
