--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
         }
     </style>
 </head>
-</head>
 <body>
     <div class="container">
         <h1>Markov Chain Generator</h1>
@@ -154,7 +153,7 @@
     </div>
 
     <script>
-        const API_ENDPOINT = 'https://markovbot-backend.onrender.com';
+        const API_URL = 'https://markovbot-backend.onrender.com';
 
         async function generate() {
             const elements = {
@@ -165,7 +164,7 @@
                 button: document.querySelector('button')
             };
 
-            // Reset state
+            // Reset UI state
             elements.output.textContent = '';
             elements.error.style.display = 'none';
             elements.button.disabled = true;
@@ -173,25 +172,35 @@
             elements.status.textContent = 'Generating...';
 
             try {
-                const response = await fetch(API_ENDPOINT, {
+                const response = await fetch(API_URL, {
                     method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
+                    headers: { 
+                        'Content-Type': 'application/json',
+                        'Accept': 'application/json'
+                    },
                     body: JSON.stringify({ channelId: '752106070532554833' })
                 });
 
+                // Check content type first
+                const contentType = response.headers.get('content-type');
+                if (!contentType || !contentType.includes('application/json')) {
+                    const text = await response.text();
+                    throw new Error(`Invalid response: ${text.slice(0, 100)}`);
+                }
+
                 const data = await response.json();
-                
+
                 if (!response.ok) {
-                    throw new Error(data.error || 'Generation failed');
+                    throw new Error(data.error || 'Unknown error occurred');
                 }
 
                 // Process emojis
                 const processedText = data.markovText.replace(
-                    /<(?<animated>a?):(?<name>\w+):(?<id>\d+)>/g, 
+                    /<(?<animated>a?):(?<name>\w+):(?<id>\d+)>/g,
                     (_, animated, name, id) => 
                         `<img src="https://cdn.discordapp.com/emojis/${id}.${animated ? 'gif' : 'png'}" 
-                              alt=":${name}:" 
-                              class="discord-emoji">`
+                             alt=":${name}:" 
+                             class="discord-emoji">`
                 );
 
                 elements.output.innerHTML = processedText;
