--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </div>
 
     <script>
-        const API_URL = 'https://markovbot-backend.onrender.com';
+        const API_URL = 'https://markovbot-backend.onrender.com/api/generate';
 
         async function generate() {
             const elements = {
