--- a/index.html
+++ b/index.html
@@ -164,7 +164,6 @@
                 button: document.querySelector('button')
             };
 
-            // Reset UI state
             elements.output.textContent = '';
             elements.error.style.display = 'none';
             elements.button.disabled = true;
@@ -181,23 +180,17 @@
                     body: JSON.stringify({ channelId: '752106070532554833' })
                 });
 
-                // Check content type first
-                const contentType = response.headers.get('content-type');
-                if (!contentType || !contentType.includes('application/json')) {
+                if (!response.ok) {
                     const text = await response.text();
-                    throw new Error(`Invalid response: ${text.slice(0, 100)}`);
+                    throw new Error(text.slice(0, 100));
                 }
 
                 const data = await response.json();
 
-                if (!response.ok) {
-                    throw new Error(data.error || 'Unknown error occurred');
-                }
-
-                // Process emojis
+                // Convert Discord emoji syntax to images
                 const processedText = data.markovText.replace(
                     /<(?<animated>a?):(?<name>\w+):(?<id>\d+)>/g,
-                    (_, animated, name, id) => 
+                    (match, animated, name, id) => 
                         `<img src="https://cdn.discordapp.com/emojis/${id}.${animated ? 'gif' : 'png'}" 
                              alt=":${name}:" 
                              class="discord-emoji">`
