--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
             margin: 0;
             padding: 0;
         }
-
         body {
             background: #313338;
             color: #dbdee1;
@@ -19,7 +18,6 @@
             padding: 20px;
             overflow: hidden;
         }
-
         .container {
             background: #2b2d31;
             border-radius: 8px;
@@ -30,7 +28,6 @@
             position: relative;
             z-index: 1;
         }
-
         h1 {
             color: #ffffff;
             font-size: 1.5rem;
@@ -38,7 +35,6 @@
             margin: 0 0 20px 0;
             text-align: center;
         }
-
         .content-box {
             background: #1e1f22;
             border-radius: 8px;
@@ -47,7 +43,6 @@
             overflow-y: auto;
             padding: 15px;
         }
-
         button {
             background: #5865f2;
             border: none;
@@ -60,20 +55,16 @@
             transition: background 0.2s;
             width: 100%;
         }
-
         button:hover {
             background: #4752c4;
         }
-
         button:active {
             background: #3c45a5;
         }
-
         button:disabled {
             background: #40444b;
             cursor: not-allowed;
         }
-
         #output {
             color: #dbdee1;
             font-size: 0.9rem;
@@ -81,14 +72,12 @@
             margin: 0;
             white-space: pre-wrap;
         }
-
         .discord-emoji {
             height: 20px;
             margin: 0 2px;
             vertical-align: middle;
             width: 20px;
         }
-
         .loader {
             animation: spin 1s linear infinite;
             border: 3px solid rgba(255, 255, 255, 0.1);
@@ -99,7 +88,6 @@
             margin: 0 auto;
             width: 20px;
         }
-
         .status-info {
             border-top: 1px solid #404249;
             color: #b5bac1;
@@ -108,7 +96,6 @@
             padding-top: 15px;
             text-align: center;
         }
-
         .error {
             background: #2a0709;
             border-radius: 4px;
@@ -118,14 +105,12 @@
             margin-top: 15px;
             padding: 12px;
         }
-
         .typing-indicator {
             display: inline-flex;
             align-items: center;
             gap: 4px;
             margin-left: 8px;
         }
-
         .dot {
             animation: bounce 1.4s infinite ease-in-out;
             background: #b5bac1;
@@ -133,24 +118,19 @@
             height: 6px;
             width: 6px;
         }
-
         .dot:nth-child(2) {
             animation-delay: 0.2s;
         }
-
         .dot:nth-child(3) {
             animation-delay: 0.4s;
         }
-
         .word-by-word {
             display: inline;
         }
-
         .word {
             animation: fadeIn 0.3s ease forwards;
             opacity: 0;
         }
-
         .cursor {
             animation: blink 1s infinite;
             background: #dbdee1;
@@ -159,34 +139,27 @@
             margin-left: 2px;
             width: 2px;
         }
-
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
-
         @keyframes bounce {
             0%, 80%, 100% { transform: translateY(0); }
             40% { transform: translateY(-6px); }
         }
-
         @keyframes fadeIn {
             to { opacity: 1; }
         }
-
         @keyframes blink {
             50% { opacity: 0; }
         }
-
         @media (max-width: 480px) {
             body {
                 padding: 15px;
             }
-
             .container {
                 padding: 15px;
             }
-
             button {
                 font-size: 0.9rem;
                 padding: 10px 20px;
@@ -206,11 +179,28 @@
         </div>
         <div class="status-info" id="status">Ready</div>
         <div class="error" id="error"></div>
+        <div class="status-info" id="cache-status">Last Refreshed: Never</div>
     </div>
-
     <script>
         const API_URL = 'https://markovbot-backend.onrender.com/api/generate';
+        const CACHE_STATUS_URL = 'https://markovbot-backend.onrender.com/api/cache-status';
         let currentAnimation = null;
+
+        async function updateCacheStatus() {
+            try {
+                const response = await fetch(CACHE_STATUS_URL);
+                if (!response.ok) throw new Error(await response.text());
+                const data = await response.json();
+                const statusElement = document.getElementById('cache-status');
+                if (data.refreshing) {
+                    statusElement.textContent = 'Cache is being refreshed. This may take a few minutes.';
+                } else {
+                    statusElement.textContent = `Last Refreshed: ${data.lastRefreshed}`;
+                }
+            } catch (err) {
+                console.error('Failed to fetch cache status:', err);
+            }
+        }
 
         async function generate() {
             const elements = {
@@ -219,13 +209,11 @@
                 status: document.getElementById('status'),
                 button: document.querySelector('button')
             };
-
             if (currentAnimation) clearInterval(currentAnimation);
             elements.output.innerHTML = '<span class="thinking">Thinking<span class="typing-indicator"><span class="dot"></span><span class="dot"></span><span class="dot"></span></span></span><span class="cursor"></span>';
             elements.error.style.display = 'none';
             elements.button.disabled = true;
             elements.status.textContent = 'Starting generation...';
-
             try {
                 const response = await fetch(API_URL, {
                     method: 'POST',
@@ -235,10 +223,8 @@
                     },
                     body: JSON.stringify({ channelId: '752106070532554833' })
                 });
-
                 if (!response.ok) throw new Error(await response.text());
                 const data = await response.json();
-
                 const processedText = data.markovText.replace(
                     /<(?<animated>a?):(?<name>\w+):(?<id>\d+)>/g,
                     (_, animated, name, id) => 
@@ -246,14 +232,11 @@
                              alt=":${name}:" 
                              class="discord-emoji">`
                 );
-
                 const wordElements = processedText.split(/(<img[^>]*>| )/).filter(w => w.trim() !== '');
                 elements.output.innerHTML = '<span class="word-by-word"></span><span class="cursor"></span>';
                 const textContainer = elements.output.querySelector('.word-by-word');
-
                 let index = 0;
                 elements.status.textContent = 'Assembling message...';
-
                 currentAnimation = setInterval(() => {
                     if (index >= wordElements.length) {
                         clearInterval(currentAnimation);
@@ -261,7 +244,6 @@
                         elements.status.textContent = `Generated from ${data.messageCount} messages`;
                         return;
                     }
-
                     const word = wordElements[index];
                     const span = document.createElement('span');
                     span.className = 'word';
@@ -272,12 +254,10 @@
                         span.textContent = word;
                         if (index > 0) span.textContent = ' ' + span.textContent;
                     }
-
                     textContainer.appendChild(span);
                     index++;
                     elements.output.scrollTop = elements.output.scrollHeight;
                 }, 75);
-
             } catch (err) {
                 elements.output.innerHTML = '';
                 elements.error.textContent = `Error: ${err.message.slice(0, 100)}`;
@@ -286,6 +266,10 @@
                 elements.button.disabled = false;
             }
         }
+
+        // Update cache status on page load and every 5 minutes
+        updateCacheStatus();
+        setInterval(updateCacheStatus, 5 * 60 * 1000);
     </script>
 </body>
 </html>
