--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
         <div class="status-info" id="status">Ready</div>
         <div class="error" id="error"></div>
-        <div class="status-info" id="cache-status">Last Refreshed: Never</div>
+        <div class="status-info" id="cache-status">Cache Last Refreshed: Never</div>
     </div>
     <script>
         const API_URL = 'https://markovbot-backend.onrender.com/api/generate';
