--- a/index.html
+++ b/index.html
@@ -35,6 +35,29 @@
             margin: 0 0 20px 0;
             text-align: center;
         }
+        .input-group {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 15px;
+        }
+        .input-group label {
+            color: #b5bac1;
+            font-size: 0.9rem;
+            margin-bottom: 5px;
+        }
+        .input-group input {
+            background: #1e1f22;
+            border: 1px solid #404249;
+            border-radius: 4px;
+            color: #dbdee1;
+            font-size: 1rem;
+            padding: 10px;
+            transition: border-color 0.2s;
+        }
+        .input-group input:focus {
+            border-color: #5865f2;
+            outline: none;
+        }
         .content-box {
             background: #1e1f22;
             border-radius: 8px;
@@ -160,6 +183,10 @@
             .container {
                 padding: 15px;
             }
+            .input-group input {
+                font-size: 0.9rem;
+                padding: 8px;
+            }
             button {
                 font-size: 0.9rem;
                 padding: 10px 20px;
@@ -170,6 +197,10 @@
 <body>
     <div class="container">
         <h1>Markov Chain Generator</h1>
+        <div class="input-group">
+            <label for="starting-word">Starting Word:</label>
+            <input type="text" id="starting-word" placeholder="Enter a starting word (optional)">
+        </div>
         <button onclick="generate()">
             <span>Generate Message</span>
             <div class="loader" id="loader"></div>
@@ -179,7 +210,7 @@
         </div>
         <div class="status-info" id="status">Ready</div>
         <div class="error" id="error"></div>
-        <div class="status-info" id="cache-status">Cache Last Refreshed: Never</div>
+        <div class="status-info" id="cache-status">Last Refreshed: Never</div>
     </div>
     <script>
         const API_URL = 'https://markovbot-backend.onrender.com/api/generate';
@@ -207,7 +238,8 @@
                 output: document.getElementById('output'),
                 error: document.getElementById('error'),
                 status: document.getElementById('status'),
-                button: document.querySelector('button')
+                button: document.querySelector('button'),
+                startingWordInput: document.getElementById('starting-word')
             };
             if (currentAnimation) clearInterval(currentAnimation);
             elements.output.innerHTML = '<span class="thinking">Thinking<span class="typing-indicator"><span class="dot"></span><span class="dot"></span><span class="dot"></span></span></span><span class="cursor"></span>';
@@ -215,13 +247,14 @@
             elements.button.disabled = true;
             elements.status.textContent = 'Starting generation...';
             try {
+                const startingWord = elements.startingWordInput.value.trim() || undefined;
                 const response = await fetch(API_URL, {
                     method: 'POST',
                     headers: { 
                         'Content-Type': 'application/json',
                         'Accept': 'application/json'
                     },
-                    body: JSON.stringify({ channelId: '752106070532554833' })
+                    body: JSON.stringify({ channelId: '752106070532554833', startingWord })
                 });
                 if (!response.ok) throw new Error(await response.text());
                 const data = await response.json();
