--- a/index.html
+++ b/index.html
@@ -198,10 +198,6 @@
     <div class="container">
         <h1>Markov Chain Generator</h1>
         <div class="input-group">
-            <label for="username">Username:</label>
-            <input type="text" id="username" placeholder="Enter your username">
-        </div>
-        <div class="input-group">
             <label for="starting-word">Starting Word:</label>
             <input type="text" id="starting-word" placeholder="Enter a starting word (optional)">
         </div>
@@ -243,7 +239,6 @@
                 error: document.getElementById('error'),
                 status: document.getElementById('status'),
                 button: document.querySelector('button'),
-                usernameInput: document.getElementById('username'),
                 startingWordInput: document.getElementById('starting-word')
             };
             if (currentAnimation) clearInterval(currentAnimation);
@@ -252,7 +247,6 @@
             elements.button.disabled = true;
             elements.status.textContent = 'Starting generation...';
             try {
-                const username = elements.usernameInput.value.trim() || 'Anonymous';
                 const startingWord = elements.startingWordInput.value.trim() || undefined;
                 const response = await fetch(API_URL, {
                     method: 'POST',
@@ -260,7 +254,7 @@
                         'Content-Type': 'application/json',
                         'Accept': 'application/json'
                     },
-                    body: JSON.stringify({ channelId: '752106070532554833', startingWord, username })
+                    body: JSON.stringify({ channelId: '752106070532554833', startingWord })
                 });
                 if (!response.ok) throw new Error(await response.text());
                 const data = await response.json();
